# local-llm-playground

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: REPORT.md  prompts.toml  results.json  run.py
examples/: 01_hello_deepseek.py  02_streaming.py  03_multi_turn_chat.py  04_reasoning_trace.py  05_function_calling.py  06_compare_models.py
src/local_llm_playground/: __init__.py  api.py  benchmark.py  cli.py  client.py  config.py  utils.py  wechat.py
